--- a/.eslintrc
+++ b/.eslintrc
@@ -6,11 +6,16 @@
     "jquery": true
   },
 
-  "globals": {},
+  "globals": {
+    "Phaser"
+  },
 
   "rules": {
     "vars-on-top": 0,
     "func-names": 0,
-    "space-before-function-paren": 0
+    "space-before-function-paren": 0,
+    "no-undef": 0,
+    "no-use-before-define": 0,
+    "no-unused-vars": 0
   }
 }
